--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<div class="modal-dialog">
 				<div id="modalText">
 					<img class = "mb-4 w-50" src="img/ben-robot-kids.jpg" />
-                    <p>Diana the robot began as an idea Ben had a long, long time ago, growing up in Ibadan, Nigeria.</p>
+                    <p>good robot began as an idea Ben had a long, long time ago, growing up in Ibadan, Nigeria.</p>
                     <p>Where Ben grew up there's trash EVERYWHERE. You're always walking over plastic bags, kicking over plastic bottles, it's terrible.</p>
                     <p>As a young computer nerd, Ben thought, why not use robots to clean up all that trash, since people won't?</p>
                     <p>We are a still a long way away from self-driving trash eating robots, but what if you could give a few minutes to drive a robot and help clean up trash somewhere else in the world?</p>
-                    <p>One day, Diana is gonna get big enough to clean up all the trash in Ibadan, Nigeria, and eventually all over the world.</p>
+                    <p>One day, good robot is gonna get big enough to clean up all the trash in Ibadan, Nigeria, and eventually all over the world.</p>
                     <p>If you wanna chat about the robot, send Ben an email: <strong className="font-weight-bold">ben@thekids.eu</strong></p>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 			</header>
 
 			<main id="hello" class="px-3">
-				<h1>Hi, I'm Diana!</h1> 
+				<h1>Hi, I'm good robot!</h1> 
                 <p class="lead">I'm a robot you can drive! When I get bigger, I'm gonna clean trash off the beach!</p>
                 <p class="lead"> (click to continue) </p>
 			</main>
