Trying to detect video playing

--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
 			</main>
 
 			<main id="goodbye" class="px-3">
-				<h1>That's all, folks! 🎅</h1> 
-                <p class="lead">Thanks for driving! Happy holidays and see you soon!</p>
-                <p class="lead"> 🤖 🎄 </p>
-                <img class="w-25" src="img/christmas.jpg" />
+				<h1>Can't connect!</h1> 
+                <p class="lead">good robot is probably sleeping! 🤖 😴 try again later!</p>
 			</main>
 
 			<footer class="mt-auto">
