--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div id="modalText">
-					<img class = "mb-4 w-50" src="img/ben-robot-kids.jpg" />
+					<div style="padding:56.25% 0 1rem 0;position:relative;"><iframe src="https://player.vimeo.com/video/434339559?h=806a15d718" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                     <p>good robot began as an idea Ben had a long, long time ago, growing up in Ibadan, Nigeria.</p>
                     <p>Where Ben grew up there's trash EVERYWHERE. You're always walking over plastic bags, kicking over plastic bottles, it's terrible.</p>
                     <p>As a young computer nerd, Ben thought, why not use robots to clean up all that trash, since people won't?</p>
@@ -92,12 +92,16 @@
 				</div>
 				<video id="video" muted autoPlay playsInline>
 				</video>
+				<div id="no-stream">
+					<h1>Can't connect!</h1> 
+                	<p class="lead">good robot is probably sleeping! 🤖 😴 try again later!</p>
+				</div>
 			</main>
 
 			<footer class="mt-auto">
 				<p class="float-md-start">
-					go 
-					<span class="rainbow-shadow">EIT</span>!
+					follow 
+					<a href="https://www.instagram.com/realgoodrobot/" target="_blank"><span class="rainbow-shadow">realgoodrobot</span></a>!
 				</p>
 				<p class="float-md-end">let's clean up the world 🏝</p>
 			</footer>
