--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 					<div id="overlay-bottom" class="mt-auto"></div>
 				</div>
 				<div id="nipple" class="no-select">
+					<div id="nipple-tooltip" data-bs-toggle="tooltip" data-bs-placement="right" title="Move me!">
+					</div>
 				</div>
 				<video id="video" muted autoPlay playsInline>
 				</video>
