Fix unclickable modal

--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 
 		<!-- Modal -->
 		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div id="modalText">
-					<div style="padding:56.25% 0 1rem 0;position:relative;"><iframe src="https://player.vimeo.com/video/434339559?h=806a15d718" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-                    <p>good robot began as an idea Ben had a long, long time ago, growing up in Ibadan, Nigeria.</p>
-                    <p>Where Ben grew up there's trash EVERYWHERE. You're always walking over plastic bags, kicking over plastic bottles, it's terrible.</p>
-                    <p>As a young computer nerd, Ben thought, why not use robots to clean up all that trash, since people won't?</p>
-                    <p>We are a still a long way away from self-driving trash eating robots, but what if you could give a few minutes to drive a robot and help clean up trash somewhere else in the world?</p>
-                    <p>One day, good robot is gonna get big enough to clean up all the trash in Ibadan, Nigeria, and eventually all over the world.</p>
-                    <p>If you wanna chat about the robot, send Ben an email: <strong className="font-weight-bold">ben@thekids.eu</strong></p>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div id="modalText">
+						<div style="padding:56.25% 0 1rem 0;position:relative;"><iframe src="https://player.vimeo.com/video/434339559?h=806a15d718" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	                    <p>good robot began as an idea Ben had a long, long time ago, growing up in Ibadan, Nigeria.</p>
+	                    <p>Where Ben grew up there's trash EVERYWHERE. You're always walking over plastic bags, kicking over plastic bottles, it's terrible.</p>
+	                    <p>As a young computer nerd, Ben thought, why not use robots to clean up all that trash, since people won't?</p>
+	                    <p>We are a still a long way away from self-driving trash eating robots, but what if you could give a few minutes to drive a robot and help clean up trash somewhere else in the world?</p>
+	                    <p>One day, good robot is gonna get big enough to clean up all the trash in Ibadan, Nigeria, and eventually all over the world.</p>
+	                    <p>If you wanna chat about the robot, send Ben an email: <strong className="font-weight-bold">ben@thekids.eu</strong></p>
+					</div>
 				</div>
 			</div>
 		</div>
